# bazel-playground

./: .gitignore
concat_files/: 3.yaml  BUILD.bazel  rules.bzl
concat_files_go/: .bazelrc  BUILD.bazel  deps.bzl  go.mod  go.sum  rules.bzl
concat_files_go/cmd/concat/: BUILD.bazel  main.go
concat_files_go/pkg/cli/: BUILD.bazel
concat_files_go/pkg/logging/: BUILD.bazel
concat_files_py/: 1.yaml  BUILD.bazel  rules.bzl
concat_files_py/scripts/: concat.py
external_tools/: BUILD.bazel  WORKSPACE  deps.bzl  go.mod  go.sum
external_tools/bazel/: tools.go
