load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "concat_lib",
    srcs = ["main.go"],
    importpath = "github.com/gentoomaniac/bazel-playground/concat_files_go/cmd/concat",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cli",
        "//pkg/logging",
        "@com_github_alecthomas_kong//:kong",
        "@com_github_rs_zerolog//log",
    ],
)

go_binary(
    name = "concat",
    embed = [":concat_lib"],
    visibility = ["//visibility:public"],
)
